--- a/TP2/package.json
+++ b/TP2/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.2.5",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@mui/styled-engine-sc": "^7.1.0",
@@ -19,6 +22,7 @@
     "react-dom": "^19.1.0",
     "react-router": "^7.6.0",
     "styled-components": "^6.1.18",
+    "swiper": "^11.2.6",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
